<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/white"
    tools:context=".Activity.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Existing Profile Header Section -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="#3562A6">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="78dp"
                    android:layout_marginBottom="-15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/arc_3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/profile2"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Setări"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/backbtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/background_oval_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/acasaicon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mircea"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="#3562A6"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center" />

            <!-- Settings Sections -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_marginTop="0dp">

                <!-- Select City Section -->
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/coordinatorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/white">

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <LinearLayout
                    android:id="@+id/select_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/terrapic" />

                    <Spinner
                        android:id="@+id/spinner_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:spinnerMode="dropdown"/>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Change Email Section -->
                <LinearLayout
                    android:id="@+id/change_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/change_email"
                        android:src="@drawable/aronicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Schimbă Email"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Change Password Section -->
                <LinearLayout
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/change_password"
                        android:src="@drawable/noseeicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Schimbă Parolă"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Toggle Notifications Section -->
                <LinearLayout
                    android:id="@+id/toggle_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/notifications"
                        android:src="@drawable/notic" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Notificări"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <Switch
                        android:id="@+id/switch_notifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:checked="true" />
                </LinearLayout>

                <!-- Select Age Section -->
                <LinearLayout
                    android:id="@+id/select_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ageicon" />

                    <Spinner
                        android:id="@+id/spinner_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:background="?attr/selectableItemBackground"
                        android:spinnerMode="dropdown" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Privacy Policy Section -->
                <LinearLayout
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/privacy_policy"
                        android:src="@drawable/privacyicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Politică de confidențialitate"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Report a Problem Section -->
                <LinearLayout
                    android:id="@+id/report_problem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/report_problem"
                        android:src="@drawable/problemicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Raportează o problemă"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Help Section -->
                <LinearLayout
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/help"
                        android:src="@drawable/helpicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Am nevoie de ajutor"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>

                <!-- Delete Account Section -->
                <LinearLayout
                    android:id="@+id/delete_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/delete_account"
                        android:src="@drawable/deleteicon" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="Șterge contul"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/chevron_right"
                        android:src="@drawable/arrow" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
